--- a/src/componentes/LogInSignUp/LogInSignUp.css
+++ b/src/componentes/LogInSignUp/LogInSignUp.css
@@ -97,3 +97,38 @@
         background: #EAEAEA;
         color: #676767;
     }
+
+
+    .mode-switch {
+        display: flex;
+        justify-content: center;
+        gap: 10px;
+        margin-top: 20px;
+    }
+    
+    .mode-switch button { 
+        padding: 10px 20px;
+        border: none;
+        border-radius: 25px;
+        font-size: 16px;
+        font-weight: 600;
+        cursor: pointer;
+        transition: background-color 0.3s, color 0.3s;
+    }
+    
+    .mode-switch .light-mode {
+        background-color: #4c00b4;
+        color: #000;
+    }
+    
+    .mode-switch .dark-mode {
+        background-color: #3F51B5;
+        color: #fff;
+    }
+    
+    .mode-switch button:hover {
+        background-color: #4c00b4;
+        color: #fff;
+    }
+       
+      
